# feishu-codex

./: .env.example  AGENTS.md  README.md  pyproject.toml  run.sh
feishu_codex/: __init__.py  bridge.py  codex_exec.py  main.py  sessions.py
