[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-codex"
version = "0.1.0"
description = "Feishu bot bridge to Codex CLI"
requires-python = ">=3.13"
dependencies = [
    "lark-oapi>=1.4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
feishu-codex = "feishu_codex.main:main"

[tool.hatch.build.targets.wheel]
packages = ["feishu_codex"]
